--- a/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
+++ b/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,10 @@
 
 
     <com.example.joaopedrosilva.customviewwithcanvas.Graph
+        android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:barWidth="10dp"
-        app:barHeight="150dp"/>
+        app:barHeight="130dp"/>
 
 </android.support.constraint.ConstraintLayout>
