--- a/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
+++ b/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.example.joaopedrosilva.customviewwithcanvas.MainActivity">
 
 
     <com.example.joaopedrosilva.customviewwithcanvas.Graph
         android:id="@+id/graph"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         app:barWidth="10dp"
-        app:barHeight="130dp"/>
+        app:margin="20dp"
+        app:textSizeMessage="12sp"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
