--- a/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
+++ b/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <com.example.joaopedrosilva.customviewwithcanvas.Graph
         android:id="@+id/graph"
         android:background="@android:color/white"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="200dp"
         app:barWidth="10dp"
         app:margin="20dp"
