--- a/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
+++ b/StudioProjects/CustomViewWithCanvas/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
 
     <com.example.joaopedrosilva.customviewwithcanvas.Graph
         android:id="@+id/graph"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:background="@android:color/white"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:barWidth="20dp"
-        app:margin="20"
-        app:textSizeMessage="12sp"/>
+        app:barWidth="10dp"
+        app:margin="20dp"
+        app:textSizeMessage="12sp" />
 
 </RelativeLayout>
